adjust top flash style

--- a/app/views/pages/sites.scala.html
+++ b/app/views/pages/sites.scala.html
@@ -9,8 +9,8 @@ title =  "食美特，爱美食爱生活"
 
     <div class="main-box clearfix">
 
-        <div class="flash fl ui-switchable" id="J_themeFlash">
-            <div class="scrollable">
+        <div class="flash fl" id="J_siteFlash">
+
 
                 <div class="items">
 
@@ -25,7 +25,6 @@ title =  "食美特，爱美食爱生活"
                 </div>
 
 
-            </div>
             <ul class="navi clearfix">
                 <li class="active"></li>
                 <li></li>
