--- a/public/assets/css/template/sites.css
+++ b/public/assets/css/template/sites.css
@@ -20,37 +20,21 @@
     background-color: #fff;
     overflow: hidden;
     position: relative;
-    z-index: 99
 }
 
-.flash .scrollable {
-    width: 685px;
-    height: 250px;
-    background-color: #fff;
-    overflow: hidden;
-    position: relative;
-}
-
-.flash .scrollable .items {
-    width: 20000em;
-    position: absolute;
-    z-index: 1;
-}
-
-.flash .scrollable .items .item {
+.flash  .items .item {
     width: 685px;
     height: 250px;
     position: relative;
-    float: left;
 }
 
-.flash .scrollable .items .item a {
+.flash  .items .item a {
     cursor: pointer;
     color: #333;
 }
 
 .flash .navi {
-    z-index: 1;
+    z-index: 99;
     position: absolute;
     right: 20px;
     bottom: 5px;
