--- a/app/views/search/result.scala.html
+++ b/app/views/search/result.scala.html
@@ -3,7 +3,7 @@
 user,
 nav="find",
 title = "宝贝搜索结果_食美特，爱美食爱生活"
-)(css="/assets/css/template/faxian.css") {
+)(css="/assets/css/template/search.css") {
 <div class="container" id="index">
     <div class="tag-book s1024">
         @if(page.items.isEmpty){
@@ -24,7 +24,7 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
                 <div class="goods small @if((i+1)%4==0){last} ">
                     <div class="goods-pic">
                         <a class="pic-link" href="@controllers.routes.Baobei.view(goodsId)" title="@goodsName" target="_blank">
-                            <img src="/assets/img/ui/blank.gif"  data-original='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
+                            <img src='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
                         </a>
                         <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goodsPic" data-prourl="@controllers.routes.Baobei.view(goodsId)" data-proname="@goodsName" data-type="0" data-proid="@goodsId">
                             <i></i>
@@ -76,6 +76,7 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
         </div>
 
         <!--宝贝展示 end-->
+        <div class="clear"></div>
     <div class="pt30 pb20 clearfix">
         <div class="pagin4faxian tac">
             <ul>
@@ -103,6 +104,6 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
 }{
 
 <script type="text/javascript">
-    seajs.use(['smeite/baobei/baobei','smeite/baobei/favor'])
+    seajs.use(['smeite/search/search','smeite/baobei/favor'])
 </script>
 }
