--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -29,7 +29,7 @@
 
                 <div class="search" id="search">
                     <form action="/search" method="get">
-                        <input class="search-input-keyword" type="text" id="J_keyword" value="请输入您想要搜索的淘宝商品网址或者关键词" name="item">
+                        <input class="search-input-keyword" type="text" id="J_keyword" value="请输入您想要搜索关键词" name="item">
                         <button class="header-search-button" type="submit">搜索</button>
                     </form>
 
