adjust some bugs for site post

--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -151,7 +151,7 @@ title =  "食美特，不一样的生活"
                                  </div>
                              </div>
                          </div>
-                        <div class="title">
+                        <div class="title ofh">
                             <a href="@controllers.routes.Sites.post(item.id.get)" class="ofh">@item.title</a>
                         </div>
 
