--- a/app/views/sites/editPost.scala.html
+++ b/app/views/sites/editPost.scala.html
@@ -29,9 +29,11 @@ title =  "食美特，不一样的生活"
                     <div class="form-row clearfix">
                     <label>分类：</label>
                     <div class="fm-item">
-                            <a href="javascript:void(0)" class='type @if(form("cid").value.getOrElse("") == 0){active} ' data-id="0" data-type="sifangcai">私房菜</a>
+                            <a href="javascript:void(0)" class='type @if(form("cid").value.getOrElse("") == 0){active} ' data-id="0" data-type="sifangcai">菜谱</a>
                            <a href="javascript:void(0)" class='type  @if(form("cid").value.getOrElse("") == 1){active}  ' data-id="1" data-type="shicai">食材</a>
-                            <a href="javascript:void(0)" class='type @if(form("cid").value.getOrElse("") == 2){active}  ' data-id="2">其他</a>
+                        <a href="javascript:void(0)" class='type @if(form("cid").value.getOrElse("") == 2){active}  ' data-id="2">常识</a>
+                        <a href="javascript:void(0)" class='type @if(form("cid").value.getOrElse("") == 2){active}  ' data-id="3">问答</a>
+                            <a href="javascript:void(0)" class='type @if(form("cid").value.getOrElse("") == 2){active}  ' data-id="4">其他</a>
                         <div class="sub-item clearfix">
                             <dl>
                                 <dt>
@@ -100,13 +102,13 @@ title =  "食美特，不一样的生活"
                             </dl>
 
                         </div>
-                        <p>选择相应的分类，让大家更容易找到你的小镇</p>
+                        <p>选择相应的分类，让大家更容易找到你的帖子</p>
                     </div>
                 </div>
                     <div class="form-row post-tags clearfix">
                         <label>标签：</label>
                         <div class="fm-item">
-                            <input type="text" class="b-input" name="tags" id="J_TopicTags"  value='@form("tags").value'>
+                            <input type="text" class="b-input" name="tags" id="J_tags"  value='@form("tags").value'>
                             <p>多个标签用逗号隔开</p>
                         </div>
                     </div>
@@ -141,7 +143,7 @@ title =  "食美特，不一样的生活"
            <div class="post-intro">
                <h5>发帖小技巧：</h5>
                <div class="bd">
-                   小镇大镇长正在对你的小镇进行审核，审核周期为一个工作日。审核结果会通过想去网的私信，或者你留下的联系方式通知到你。希望能够带给你惊喜，请耐心等待。
+                   todo
                </div>
            </div>
         </div>
