--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -96,7 +96,7 @@ title = " 美食街_食美特，爱美食爱生活"
     <!-- 食材主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href='@controllers.routes.Pages.themeList(1,1,1)'>特产</a></h2>
+            <h2 class="fl"><a href='@controllers.routes.Pages.themeList(1,1,1)'>食材</a></h2>
             <a class="fr" href='@controllers.routes.Pages.themeList(1,1,1)'>更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
