fix some bugs in index.scala.html

--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -254,8 +254,8 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian(3,0,1,1)' target="_blank">居家</a></h2>
-                <div class="title-desc"><a href='@controllers.routes.Pages.faxian(3,0,1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
+                <h2 class="title clearfix"><a href='@controllers.routes.Pages.faxian(2,0,1,1)' target="_blank">居家</a></h2>
+                <div class="title-desc"><a href='@controllers.routes.Pages.faxian(2,0,1,1)' target="_blank">&nbsp;•&nbsp;每日精选</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(jujiaTags.content.getOrElse(""))
@@ -336,8 +336,8 @@ nav="index"
         <dl class="first">
             <dt>
             <div class="title-wrap clearfix">
-                <h2 class="title clearfix"><a href="/faxian/3" target="_blank">小镇</a></h2>
-                <div class="title-desc"><a href="/faxian/3" target="_blank">&nbsp;•&nbsp;人杰地灵</a></div>
+                <h2 class="title clearfix"><a href="/sites" target="_blank">小镇</a></h2>
+                <div class="title-desc"><a href="/site/list" target="_blank">&nbsp;•&nbsp;人杰地灵</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(shicaiTags.content.getOrElse(""))
