fix some bugs in index.scala.html

--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -337,7 +337,7 @@ nav="index"
             <dt>
             <div class="title-wrap clearfix">
                 <h2 class="title clearfix"><a href="/sites" target="_blank">小镇</a></h2>
-                <div class="title-desc"><a href="/site/list" target="_blank">&nbsp;•&nbsp;人杰地灵</a></div>
+                <div class="title-desc"><a href="/site/list" target="_blank">&nbsp;•&nbsp;每日推荐</a></div>
             </div>
             <div class="tag-wrap clearfix">
                 @Html(shicaiTags.content.getOrElse(""))
