--- a/app/views/users/theme.scala.html
+++ b/app/views/users/theme.scala.html
@@ -14,9 +14,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
                     <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(authorStatic.postBaobeiNum+authorStatic.loveBaobeiNum)<br>宝贝</a></li>
                     <li class="cur"><a href="@controllers.users.routes.Users.theme(author.id.get)">@(authorStatic.postThemeNum+authorStatic.loveThemeNum)<br>主题</a></li>
-
+                    <li><a href="@controllers.users.routes.Users.forum(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
                     <li><a href="@controllers.users.routes.Users.site(author.id.get)">N+<br>小镇</a></li>
-                    <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
+                    <li><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
                     <li class="last" ><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>关注</a></li>
 
                 </ul>
