add site for user nav

--- a/app/views/pages/cookbook.scala.html
+++ b/app/views/pages/cookbook.scala.html
@@ -70,7 +70,7 @@ title =  "食美特，不一样的生活"
     <div class="category clearfix" id="J_seasonShicai">
 
         <div class="hd clearfix">
-            <h2 class="fl"><a href="#">应季食材</a></h2>
+            <h2 class="fl"><a href="#">食材推荐</a></h2>
             <ul class="tabs">
                 <li class="active"></li>
                 <li></li>
@@ -105,10 +105,10 @@ title =  "食美特，不一样的生活"
         </div>
     </div>
 
-    <!-- 食材主题推荐-->
+    <!-- 菜谱 推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href="@controllers.routes.Pages.postList(0,1,1)">每周私房菜</a></h2>
+            <h2 class="fl"><a href="@controllers.routes.Pages.postList(0,1,1)">私房菜推荐</a></h2>
             <a class="fr" href="@controllers.routes.Pages.postList(0,1,1)">更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
