--- a/app/views/users/forum.scala.html
+++ b/app/views/users/forum.scala.html
@@ -148,7 +148,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                     </a>
                                 </div>
                                 <div class="comment-con">
-                                    <p class="top">
+                                    <p class="top ofh">
                                         <a href="@controllers.routes.Forums.view(cid,1)" target="_blank">@cTitle</a>
                                     </p>
                                     <p class="btm">
@@ -171,9 +171,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
         }{
 <script type="text/javascript">
-    seajs.use('app/init', function(init) {
-        init.load('app/user/user.profile,app/forum/forum.follow');
-    })
+
     seajs.use(["smeite/user/profile","smeite/forum/favor"]);
 </script>
 }
