--- a/public/assets/css/template/index.css
+++ b/public/assets/css/template/index.css
@@ -131,7 +131,7 @@
     height: 30px;
     line-height: 30px;
     z-index: 10;
-    background-color: #fff;
+    background-color: #eee;
     opacity: .7;
     filter: alpha(opacity = 70)
 }
@@ -222,19 +222,78 @@
     vertical-align: middle
 }
 
-.category dl.sites{
-    width: 700px;
-    margin-right: 0!important;
+/* category site and post*/
+.category .hd{
+height: 20px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #e26;
 }
-.category dl.sites dd{
+.category .hd h2{
+    font-size: 16px;
+    height: 20px;
+    line-height: 20px;
     float: left;
-    width: 167px;
-    height: 167px;
-    margin-right: 10.5px;
+    color: #333;
+    display: inline-block;
 }
-.category dl.sites dd.last{
-    margin-right: 0 !important;
+.category .hd h2 a {
+    color: #333;
+    text-decoration: none;
 }
+.category .bd{
+    padding-top: 10px;
+}
+.category .colmain710 {
+    float: left;
+    width: 710px;
+}
+.category .colaside230 {
+    float: right;
+    width: 230px;
+}
+.category .bd .site-list,.category .bd .post-list{
+    padding: 10px;
+    border: 1px solid #dbdbdb;
+    background: #fff;
+    overflow: hidden;
+}
+.category .bd .site-list .site {
+    padding: 10px 0 10px 10px;
+    width: 324px;
+    float: left;
+
+}
+.category .bd .site-list .pic{
+ width: 100px;
+  height: 100px;
+    float: left;
+    margin-right: 10px;
+}
+.category .bd .site-list  .info{
+     width: 214px;
+    float: left;
+}
+.category .bd .site-list .name{
+    height: 1.5em;
+    line-height: 1.5em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.category .bd .site-list .intro{
+    line-height: 1.5em;
+    height: 4.5em;
+    overflow: hidden;
+    margin: 5px 0;
+}
+.category .bd .site-list .member{
+
+}
+.category .bd .post-list{ }
+.category .bd .post-list  li{line-height:39px;height:39px;border-bottom:1px dotted #ddd;max-width:208px;*width:208px;display:block;}
+.category .bd .post-list  li a{color:#333;font-size:12px;line-height:37px;}
+.category .bd .post-list  li a em{_float:left;_width:160px;_overflow:hidden;}
+
 /*category floor end*/
 
 
