--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -4,12 +4,14 @@ hots:List[models.advert.Advert],
 meishi:List[models.advert.Advert],
 shicai:List[models.advert.Advert],
 jujia:List[models.advert.Advert],
-site:List[models.advert.Advert],
+
 
 meishiTags:models.advert.Advert,
 shicaiTags:models.advert.Advert,
 jujiaTags:models.advert.Advert,
-siteTags:models.advert.Advert,
+
+sites:List[models.site.Site],
+posts:List[models.site.Post],
 
 meishiBrands:List[models.advert.Advert],
 teseBrands:List[models.advert.Advert],
@@ -162,21 +164,12 @@ nav="index"
                 @Html(shicaiTags.content.getOrElse(""))
             </div>
             </dt>
-            @for((advert,i)<-shicai.view.zipWithIndex){
-            @if(i==0){
-            <dd>
-                <a href="@advert.link" title="@advert.title" target="_blank">
-                    <img src="@advert.pic" width="240" height="150" alt="@advert.title">
-                </a>
-                <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span> </a> </div>
-            </dd>
-            }
-            }
+
         </dl>
 
         <dl class="second">
-            @for((advert,i)<-shicai.view.zipWithIndex){
-            @if(i>0 && i<4){
+            @for((advert,i)<- shicai.view.zipWithIndex){
+            @if(i<2){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
                     <img src="@advert.pic" width="150" height="150" alt="@advert.title">
@@ -187,8 +180,8 @@ nav="index"
             }
         </dl>
         <dl class="third">
-            @for((advert,i)<-shicai.view.zipWithIndex){
-            @if(i==4){
+            @for((advert,i)<- shicai.view.zipWithIndex){
+            @if(i==2){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
                     <img src="@advert.pic" width="310" height="310" alt="@advert.title">
@@ -196,20 +189,12 @@ nav="index"
                 <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span> </a> </div>
             </dd>
             }
-            @if(i>4 && i<7){
-            <dd @if(i==5){class="mr10"}>
-                <a href="@advert.link" title="@advert.title" target="_blank">
-                    <img src="@advert.pic" width="150" height="150" alt="@advert.title">
-                </a>
-                <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span> </a> </div>
-            </dd>
-            }
+
             }
         </dl>
-
         <dl class="fourth last">
-            @for((advert,i)<-shicai.view.zipWithIndex){
-            @if(i>=7){
+            @for((advert,i)<- shicai.view.zipWithIndex){
+            @if(i>2){
 
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
@@ -244,21 +229,12 @@ nav="index"
                 @Html(jujiaTags.content.getOrElse(""))
             </div>
             </dt>
-            @for((advert,i)<-jujia.view.zipWithIndex){
-            @if(i==0){
-            <dd>
-                <a href="@advert.link" title="@advert.title" target="_blank">
-                    <img src="@advert.pic" width="240" height="150" alt="@advert.title">
-                </a>
-                <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span> </a> </div>
-            </dd>
-            }
-            }
+
         </dl>
 
         <dl class="second">
-            @for((advert,i)<-jujia.view.zipWithIndex){
-            @if(i>0 && i<4){
+            @for((advert,i)<- jujia.view.zipWithIndex){
+            @if(i<2){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
                     <img src="@advert.pic" width="150" height="150" alt="@advert.title">
@@ -269,8 +245,8 @@ nav="index"
             }
         </dl>
         <dl class="third">
-            @for((advert,i)<-jujia.view.zipWithIndex){
-            @if(i==4){
+            @for((advert,i)<- jujia.view.zipWithIndex){
+            @if(i==2){
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
                     <img src="@advert.pic" width="310" height="310" alt="@advert.title">
@@ -278,28 +254,19 @@ nav="index"
                 <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span> </a> </div>
             </dd>
             }
-            @if(i>4 && i<7){
-            <dd @if(i==5){class="mr10"}>
-                <a href="@advert.link" title="@advert.title" target="_blank">
-                    <img src="@advert.pic" width="150" height="150" alt="@advert.title">
-                </a>
-                <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span> </a> </div>
-            </dd>
-            }
+
             }
         </dl>
-
         <dl class="fourth last">
-            @for((advert,i)<-jujia.view.zipWithIndex){
-            @if(i>=7){
+            @for((advert,i)<- jujia.view.zipWithIndex){
+            @if(i>2){
+
             <dd>
                 <a href="@advert.link" title="@advert.title" target="_blank">
                     <img src="@advert.pic" width="220" height="150" alt="@advert.title">
                 </a>
                 <div class="desc"><a href="@advert.link" title="@advert.title" target="_blank"> <span>@advert.title</span></a></div>
-
             </dd>
-
 
             }
             }
@@ -322,54 +289,19 @@ nav="index"
            </div>
            <div class="bd">
                <div class="site-list">
+                   @for(site <- sites){
                     <div class="site">
                         <div class="pic">
-                            <a><img src="/images/temp/site.jpg" width="100" height="100" > </a>
+                            <a href="@controllers.routes.Sites.site(site.id.get)" title="@site.title" target="_blank"><img src="@site.pic" alt="@site.intro" width="100" height="100" > </a>
                         </div>
                         <div class="info">
-                            <h2 class="name ofh"><a>小镇测试</a></h2>
-                            <p class="intro">这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介</p>
-                            <div class="member">201居民</div>
+                            <h2 class="name ofh"><a href="@controllers.routes.Sites.site(site.id.get)" target="_blank">@site.title</a></h2>
+                            <p class="intro">@site.intro</p>
+                            <div class="member">@site.memberNum居民</div>
                         </div>
-
-
                     </div>
-                   <div class="site">
-                       <div class="pic">
-                           <a><img src="/images/temp/site.jpg" width="100" height="100" > </a>
-                       </div>
-                       <div class="info">
-                           <h2 class="name ofh"><a>小镇测试</a></h2>
-                           <p class="intro">这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介</p>
-                           <div class="member">201居民</div>
-                       </div>
+                   }
 
-
-                   </div>
-                   <div class="site">
-                       <div class="pic">
-                           <a><img src="/images/temp/site.jpg" width="100" height="100" > </a>
-                       </div>
-                       <div class="info">
-                           <h2 class="name ofh"><a>小镇测试</a></h2>
-                           <p class="intro">这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介</p>
-                           <div class="member">201居民</div>
-                       </div>
-
-
-                   </div>
-                   <div class="site">
-                       <div class="pic">
-                           <a><img src="/images/temp/site.jpg" width="100" height="100" > </a>
-                       </div>
-                       <div class="info">
-                           <h2 class="name ofh"><a>小镇测试</a></h2>
-                           <p class="intro">这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介这里是小镇简介</p>
-                           <div class="member">201居民</div>
-                       </div>
-
-
-                   </div>
                </div>
              </div>
          </div>
@@ -379,50 +311,13 @@ nav="index"
              </div>
              <div class="bd">
                  <ul class="post-list">
-
-
+                         @for(post <- posts){
                          <li class="ofh">
-                             <a href="" target="_blank" title="【新手入门】欢迎您常来逛逛">
-
-                                 <em>【新手入门】欢迎您常来逛逛</em>
+                             <a href="@controllers.routes.Sites.post(post.id.get)" target="_blank" title="@post">
+                                 <em>@post.title</em>
                              </a>
                          </li>
-
-                         <li class="ofh">
-                             <a href="" target="_blank" title="【新手入门】新居民的脚印">
-
-                                 <em>【新手入门】新居民的脚印</em>
-                             </a>
-                         </li>
-
-                         <li class="ofh">
-                             <a href="" target="_blank" title="【新手入门】购物送集分宝">
-
-                                 <em>【新手入门】购物送集分宝</em>
-                             </a>
-                         </li>
-
-                         <li class="ofh">
-                             <a href="" target="_blank" title="【新手入门】淘宝、天猫返利攻略">
-
-                                 <em>【新手入门】淘宝、天猫返利攻略</em>
-                             </a>
-                         </li>
-
-                         <li class="ofh">
-                             <a href="" target="_blank" title="【商务合作】活动赞助">
-
-                                 <em>【商务合作】活动赞助</em>
-                             </a>
-                         </li>
-
-                         <li class="ofh">
-                             <a href="" target="_blank" title="【商务合作】活动赞助">
-
-                                 <em>【商务合作】活动赞助</em>
-                             </a>
-                         </li>
-
+                           }
 
                  </ul>
              </div>
