--- a/app/views/pages/sites.scala.html
+++ b/app/views/pages/sites.scala.html
@@ -9,7 +9,7 @@ title =  "食美特，爱美食爱生活"
 
     <div class="main-box clearfix">
 
-        <div class="flash fl" id="J_siteFlash">
+        <div class="flash fl" id="J_flash">
 
 
                 <div class="items">
@@ -26,7 +26,7 @@ title =  "食美特，爱美食爱生活"
 
 
             <ul class="navi clearfix">
-                <li></li>
+                <li class="active"></li>
                 <li></li>
                 <li></li>
                 <li></li>
