--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -33,7 +33,12 @@
                 <li class="btn btn-inverse" ><a title="" href="#"><i class="icon icon-user"></i> <span class="text">Profile</span></a></li>
 
                 <li class="btn btn-inverse"><a title="" href="#"><i class="icon icon-cog"></i> <span class="text">Settings</span></a></li>
-                <li class="btn btn-inverse"><a title="" href="@controllers.admin.Managers.logout"><i class="icon icon-share-alt"></i> <span class="text">Logout</span></a></li>
+                <li class="btn btn-inverse">
+                    <a  href="@controllers.admin.routes.Managers.logout">
+                        <i class="icon icon-share-alt"></i>
+                        <span class="text">Logout</span>
+                    </a>
+                </li>
             </ul>
         </div>
 
