--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -10,20 +10,113 @@
         <a href="#" class="current">控制面板</a>
     </div>
     <div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="widget-box">
+                <div class="widget-title">
+                    <span class="icon"><i class="icon-time"></i></span>
+                    <h5>统计 @manager.loginTime</h5>
+                </div>
+                <div class="widget-content nopadding">
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>类型</th>
+                            <th>主题</th>
+                            <th>主题回复</th>
+                            <th>宝贝</th>
+                            <th>宝贝评价</th>
+                            <th>话题</th>
+                            <th>话题评价</th>
+                            <th>小镇</th>
+                            <th>帖子</th>
+                            <th>帖子回复</th>
+                            <th>私信</th>
+                            <th>用户</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                       <tr>
+                          <td> 总数统计</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                       </tr>
+                       <tr>
+                           <td> 今日新增统计</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                       </tr>
+                       <tr>
+                           <td>距上次登录统计</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                           <td> 1</td>
+                       </tr>
 
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 
         <div class="row-fluid">
             <div class="span12">
                 <div class="widget-box widget-plain">
                     <div class="widget-content center">
+                        <dl class="stats-plain">
+                            <dt>总数统计</dt>
+                            <dd>
+                                <h4><span>主题: </span> @totalThemes</h4>
+
+                            </dd>
+                            <dd>
+                                <h4><span>宝贝: </span> @totalGoodses</h4>
+
+                            </dd>
+                            <dd>
+                                <h4><span>话题: </span> @totalTopics</h4>
+
+                            </dd>
+                            <dd>
+                                <h4><span>用户: </span> @totalUsers</h4>
+
+                            </dd>
+                        </dl>
                         <ul class="stats-plain">
                             <li>
                                 <h4>@totalThemes</h4>
-                                <span>主题总数</span>
+                                <span>主题</span>
                             </li>
                             <li>
                                 <h4>@totalGoodses</h4>
-                                <span>宝贝总数</span>
+                                <span>宝贝</span>
                             </li>
                             <li>
                                 <h4>@totalTopics</h4>
