add smeite static

--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -1,8 +1,4 @@
-@(
-manager:models.admin.Manager,
-tasks:List[models.admin.ManagerTask],
-totalTaskNum:Int,
-numMap:Map
+@(manager:models.admin.Manager,tasks:List[models.admin.ManagerTask],totalTaskNum:Int,numMap:Map[String,Int])
 @views.html.admin.template(manager,"home") {
 
     <div id="content-header">
