--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -33,7 +33,7 @@ title = " 美食街_食美特，爱美食爱生活"
 
 
         <ul class="navi clearfix">
-            <li></li>
+            <li class="active"></li>
             <li ></li>
             <li ></li>
             <li ></li>
