--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -27,17 +27,16 @@ title =  "食美特，不一样的生活"
            <div class="join">
 
                <div class="follow">
-                   <a rel="followSite" href="javascript:;" class="follow-btn" data-sid="@site.id"> + 加入小镇</a>
-                   <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
-                   <span class="member-num">(<em id="J_siteMember">@site.memberNum</em>居民)</span>
+                   <a rel="followSite" href="javascript:;" class="follow-btn" data-title="@site.title" data-sid="@site.id"> + 加入小镇</a>
+
+                   <span class="member-num">&nbsp;&nbsp;<em id="J_siteMember">@site.memberNum</em>&nbsp;居民</span>
+
                </div>
 
                <!--<div class="invite">
                    <a class="follow-btn"> 邀请好友</a>
                </div>-->
            </div>
-
-
 
        </div>
        <div class="notice">
